--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -102,10 +102,10 @@
                                     </span>
                                 </b>
                                 <div class="noidung222">
-                                    <a class="content__inner" href="./card.html"><i class='bx bxs-tag-alt'></i> THẺ HỘI VIÊN</a>
-                                    <a class="content__inner" href="./train.html"><i class='bx bxs-tag-alt'></i> HUẤN LUYỆN VIÊN</a>
-                                    <a class="content__inner" href="./shop.html"><i class='bx bxs-tag-alt'></i> CỬA HÀNG WHEY</a>
-                                    <a class="content__inner" href="./chatbox.html"><i class='bx bxs-tag-alt'></i> CHAT ONLINE</a>
+                                    <a class="content__inner" href="./card.html"> THẺ HỘI VIÊN</a>
+                                    <a class="content__inner" href="./train.html"> HUẤN LUYỆN VIÊN</a>
+                                    <a class="content__inner" href="./shop.html"> CỬA HÀNG WHEY</a>
+                                    <a class="content__inner" href="./chatbox.html"> CHAT ONLINE</a>
                                 </div>
                             </div>
                             <a class="content__inner" href="./promotion.html">
