--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -132,21 +132,21 @@
                         <div class="container__colum1__inner__select">
                             <div class="happy__newyear">
                                 <a href="#">
-                                    MỪNG TẾT GIÁP THÌN
+                                    2024
                                 </a>
                                 <span>
-                                    2024
+                                    NGẬP TRÀN DEAL HOT
                                 </span>
                             </div>
                         </div>
                     </div>
                     <div class="container__colum1__inner2">
-                        đawdawdwdwdwdw
+                        loading
                     </div>
                 </div>
                 <div class="container__colum2">
                     <div class="container__colum2__inner">
-                        dăddwadwdawđ
+                        loading
                     </div>
                     <div class="container__colum2__inner2">
                         <div class="container__colum2__inner2__select">
