edit promotion 30% hihi

--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -131,22 +131,23 @@
                     <div class="container__colum1__inner">
                         <div class="container__colum1__inner__select">
                             <div class="happy__newyear">
-                                <a href="#">
-                                    2024
+                                <a class="anh2024" href="#">
+                                    <img src="../img/icon/2.png" alt="2024">
                                 </a>
-                                <span>
-                                    NGẬP TRÀN DEAL HOT
-                                </span>
                             </div>
                         </div>
                     </div>
                     <div class="container__colum1__inner2">
-                        loading
+                        VÒNG QUAY SẤM SÉT
                     </div>
                 </div>
                 <div class="container__colum2">
                     <div class="container__colum2__inner">
-                        loading
+                        <div class="container__colum2__inner__select">
+                            <div class="image__inner">
+                                <img class="anh__ico" src="../img/icon/thuy1_1-20230927065901-mn5tk.png" alt="anh">
+                            </div>
+                        </div>
                     </div>
                     <div class="container__colum2__inner2">
                         <div class="container__colum2__inner2__select">
@@ -198,6 +199,13 @@
                                         Tặng bình nước lọc 20L
                                     </span>
                                 </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container__colum2__inner3">
+                        <div class="container__colum2__inner__select">
+                            <div class="image__inner">
+                                <img class="anh__ico" src="../img/icon/thuy1_1-20230927065901-mn5tk.png" alt="anh">
                             </div>
                         </div>
                     </div>
