--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                                     <a href="./navigation/train.html">HUẤN LUYỆN VIÊN</a>
                                     <a href="./navigation/shop.html">CỬA HÀNG WHEY</a>
                                     <a href="./navigation/chatbox.html">CHAT ONLINE</a>
+                                    <a href="./navigation/test.html">TEST</a>
                                 </div>
                             </div>
                         </li>
