edit promotion 30% hihu

--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -131,9 +131,7 @@
                     <div class="container__colum1__inner">
                         <div class="container__colum1__inner__select">
                             <div class="happy__newyear">
-                                <a class="anh2024" href="#">
-                                    <img src="../img/icon/2.png" alt="2024">
-                                </a>
+                                <img class="anh2024" src="../img/icon/2.png" alt="2024">
                             </div>
                         </div>
                     </div>
@@ -156,49 +154,51 @@
                                     DANH SÁCH QUÀ TẶNG
                                 </a>
                             </div>
-                            <div class="list__gift">
-                                <a class="vip__gift" href="#">
-                                    <i class='bx bxs-gift'></i>
-                                    <span>
-                                        Tặng Người Yêu, có rồi cũng tặng
-                                    </span>
-                                </a>
-                                <a href="#">
-                                    <i class='bx bxs-gift'></i>
-                                    <span>
-                                        Tặng 2 tháng tập mất phí
-                                    </span>
-                                </a>
-                                <a href="#">
-                                    <i class='bx bxs-gift'></i>
-                                    <span>
-                                        Tặng 1 tháng tập luyện mất phí
-                                    </span>
-                                </a>
-                                <a href="#">
-                                    <i class='bx bxs-gift'></i>
-                                    <span>
-                                        Tặng 2 buổi tập cùng PT TIẾN BỊP
-                                    </span>
-                                </a>
-                                <a href="#">
-                                    <i class='bx bxs-gift'></i>
-                                    <span>
-                                        Tặng túi LV cao cấp hàng CHỢ
-                                    </span>
-                                </a>
-                                <a href="#">
-                                    <i class='bx bxs-gift'></i>
-                                    <span>
-                                        Tặng túi tập thể thao hàng CHỢ
-                                    </span>
-                                </a>
-                                <a href="#">
-                                    <i class='bx bxs-gift'></i>
-                                    <span>
-                                        Tặng bình nước lọc 20L
-                                    </span>
-                                </a>
+                            <div class="group__gift">
+                                <div class="list__gift">
+                                    <a class="vip__gift" href="#">
+                                        <i class='bx bxs-gift'></i>
+                                        <span>
+                                            Tặng Người Yêu, có rồi cũng tặng
+                                        </span>
+                                    </a>
+                                    <a href="#">
+                                        <i class='bx bxs-gift'></i>
+                                        <span>
+                                            Tặng 2 tháng tập mất phí
+                                        </span>
+                                    </a>
+                                    <a href="#">
+                                        <i class='bx bxs-gift'></i>
+                                        <span>
+                                            Tặng 1 tháng tập luyện mất phí
+                                        </span>
+                                    </a>
+                                    <a href="#">
+                                        <i class='bx bxs-gift'></i>
+                                        <span>
+                                            Tặng 2 buổi tập cùng PT TIẾN BỊP
+                                        </span>
+                                    </a>
+                                    <a href="#">
+                                        <i class='bx bxs-gift'></i>
+                                        <span>
+                                            Tặng túi LV cao cấp hàng CHỢ
+                                        </span>
+                                    </a>
+                                    <a href="#">
+                                        <i class='bx bxs-gift'></i>
+                                        <span>
+                                            Tặng túi tập thể thao hàng CHỢ
+                                        </span>
+                                    </a>
+                                    <a href="#">
+                                        <i class='bx bxs-gift'></i>
+                                        <span>
+                                            Tặng bình nước lọc 20L
+                                        </span>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
