edit promotion 30% hiha

--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -212,7 +212,100 @@
                 </div>
             </div>
         </div>
-        
+        <div class="containertwo">
+            <div class="containertwo__select">
+                <div id="headline01" class="gymz-element">
+                    <p id="paragrap01" class="gymz-element gymz-headline">KHÔNG GIAN TẬP LUYỆN ĐẲNG CẤP QUỐC TẾ</p>
+                </div>
+                <div id="line01" class="gymz-element">
+                    <div class="gymz-element gymz-boder-top"></div>
+                </div>
+                <div id="paragrap02" class="gymz-element">
+                    <p class="gymz-element gymz-paragrap02">
+                        Không gian tập luyện được thiết kế đa dạng, phục vụ nhiều bộ môn và nhu cầu tập luyện của khách hàng.
+                    </p>
+                </div>
+                <div id="group01" class="gymz-element">
+                    <div class="gymz-group">
+                        <div id="image01" class="gymz-element">
+                            <div class="gymz-element gymz-image">
+                                <img src="../img/promotion/ll4-20211015090136.jpg" alt="KHU TẬP STRENGTH">
+                            </div>
+                        </div>
+                        <div id="paragrap03" class="gymz-element">
+                            <div class="gymz-element gymz-headtext">
+                                KHU TẬP STRENGTH
+                            </div>
+                        </div>
+                        <div id="paragrap04" class="gymz-element">
+                            <div class="gymz-element gymz-text">
+                                Là khu vực bao gồm các máy tập hiện đại được nhẩu khẩu từ Technogym, Life Fitness,...
+                                 tác động vào các nhóm cơ chính của cơ thể: Lưng xô, Ngực, Bụng, Mông, Đùi.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="group02" class="gymz-element">
+                    <div class="gymz-group">
+                        <div id="image02" class="gymz-element">
+                            <div class="gymz-element gymz-image">
+                                <img src="../img/promotion/ll-20211013070920.jpg" alt="KHU TẬP FREE-WEIGHT">
+                            </div>
+                        </div>
+                        <div id="paragrap04" class="gymz-element">
+                            <div class="gymz-element gymz-headtext">
+                                KHU TẬP FREE-WEIGHT
+                            </div>
+                        </div>
+                        <div id="paragrap05" class="gymz-element">
+                            <div class="gymz-element gymz-text">
+                                Đa dạng các loại tạ theo từng hạng cân, không gian tập tạ rộng rãi giúp tập luyện hiệu quả.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="group03" class="gymz-element">
+                    <div class="gymz-group">
+                        <div id="image03" class="gymz-element">
+                            <div class="gymz-element gymz-image">
+                                <img src="../img/promotion/quang-trung-3-20210222110014.png" alt="KHU VỰC FUNCTIONAL">
+                            </div>
+                        </div>
+                        <div id="paragrap07" class="gymz-element">
+                            <div class="gymz-element gymz-headtext">
+                                KHU VỰC FUNCTIONAL
+                            </div>
+                        </div>
+                        <div id="paragrap08" class="gymz-element">
+                            <div class="gymz-element gymz-text">
+                                Được trang bị sàn tập RepHouse: không mùi, không trơn trượt, không tiếng ồn, 
+                                giảm thiểu chấn thương; cùng bộ dụng cụ chuyên dụng của Reebok.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="group04" class="gymz-element">
+                    <div class="gymz-group">
+                        <div id="image04" class="gymz-element">
+                            <div class="gymz-element gymz-image">
+                                <img src="../img/promotion/_atn9630-20200907105019.jpg" alt="KHU VỰC CARDIO">
+                            </div>
+                        </div>
+                        <div id="paragrap09" class="gymz-element">
+                            <div class="gymz-element gymz-headtext">
+                                KHU VỰC CARDIO
+                            </div>
+                        </div>
+                        <div id="paragrap010" class="gymz-element">
+                            <div class="gymz-element gymz-text">
+                                Khu vực Cardio được trang bị đầy đủ các dòng máy tập hiện đại, 
+                                được nhập khẩu trực tiếp 100% từ Technogym, Life Fitness,...
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="footer">
             <div class="footer__select">
                 <div class="footer__colum1">
