--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -225,7 +225,8 @@
                         Không gian tập luyện được thiết kế đa dạng, phục vụ nhiều bộ môn và nhu cầu tập luyện của khách hàng.
                     </p>
                 </div>
-                <div id="group01" class="gymz-element">
+                <div class="groupwarp"></div>
+                <div id="group01" class="gymz-element gymz-element-warp">
                     <div class="gymz-group">
                         <div id="image01" class="gymz-element">
                             <div class="gymz-element gymz-image">
@@ -245,7 +246,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="group02" class="gymz-element">
+                <div id="group02" class="gymz-element gymz-element-warp">
                     <div class="gymz-group">
                         <div id="image02" class="gymz-element">
                             <div class="gymz-element gymz-image">
@@ -264,7 +265,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="group03" class="gymz-element">
+                <div id="group03" class="gymz-element gymz-element-warp">
                     <div class="gymz-group">
                         <div id="image03" class="gymz-element">
                             <div class="gymz-element gymz-image">
@@ -284,7 +285,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="group04" class="gymz-element">
+                <div id="group04" class="gymz-element gymz-element-warp">
                     <div class="gymz-group">
                         <div id="image04" class="gymz-element">
                             <div class="gymz-element gymz-image">
