--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -304,6 +304,26 @@
                         </div>
                     </div>
                 </div>
+                <div id="group05" class="gymz-element ">
+                    <div class="gymz-group">
+                        <div id="image05" class="gymz-element">
+                            <div class="gymz-element gymz-image">
+                                <img src="../img/promotion/qt1-20211014054225.jpg" alt="STUDIO YOGA & GROUP X">
+                            </div>
+                        </div>
+                        <div id="paragrap011" class="gymz-element">
+                            <div class="gymz-element gymz-headtext">
+                                STUDIO YOGA & GROUP X
+                            </div>
+                        </div>
+                        <div id="paragrap012" class="gymz-element">
+                            <div class="gymz-element gymz-text">
+                                Studio với sàn gỗ cao cấp, hệ thống âm thanh, 
+                                ánh sáng phù hợp cùng đầy đủ dụng cụ, trang thiết bị
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="footer">
