--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600;900&display=swap"rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <!-- <link rel="stylesheet" href="./font/fontawesome-free-6.4.0-web/css/all.min.css"> -->
+    <link rel="stylesheet" href="../font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- <link rel="stylesheet" href="../css/base.css"> -->
     <link rel="stylesheet" href="../css/header.css">
@@ -320,6 +320,77 @@
                             <div class="gymz-element gymz-text">
                                 Studio với sàn gỗ cao cấp, hệ thống âm thanh, 
                                 ánh sáng phù hợp cùng đầy đủ dụng cụ, trang thiết bị
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="containerthree">
+            <div class="containerthree__select">
+                <div id="group06" class="gymz-element-box">
+                    <div class="gymz-box">
+                        <div id="title01" class="gymz-element-box gymz-element-box-title">
+                            <div class="gymz-element-box gymz-title">
+                                QUYỀN LỢI THẺ TẬP
+                            </div>
+                            <div id="line02" class="gymz-element-box gymz-line02">
+                            </div>
+                        </div>
+                        <div id="icon01" class="gymz-element-box">
+                            <div class="gymz-element-box gymz-icon-text">
+                                <i class="fa-solid fa-dumbbell"></i>
+                                <span>
+                                    KHÔNG GIỚI HẠN TẬP LUYỆN HƠN 45+ BỘ MÔN
+                                </span>
+                            </div>
+                        </div>
+                        <div id="icon02" class="gymz-element-box">
+                            <div class="gymz-element-box gymz-icon-text">
+                                <i class="fa-solid fa-clock"></i>
+                                <span>
+                                    LỊCH TẬP ĐA DẠNG HÀNG NGÀY
+                                </span>
+                            </div>
+                        </div>
+                        <div id="icon03" class="gymz-element-box">
+                            <div class="gymz-element-box gymz-icon-text">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <span>
+                                    TẬP LUYỆN KHẮP TP. THÁI NGUYÊN ĐƯỢC LỰA CHỌN CLB
+                                </span>
+                            </div>
+                        </div>
+                        <div id="icon04" class="gymz-element-box">
+                            <div class="gymz-element-box gymz-icon-text">
+                                <i class="fa-solid fa-vault"></i>
+                                <span>
+                                    TỪ KHOÁ CÁ NHÂN AN TOÀN FACEID/SMART LOCKER
+                                </span>
+                            </div>
+                        </div>
+                        <div id="icon05" class="gymz-element-box">
+                            <div class="gymz-element-box gymz-icon-text">
+                                <i class="fa-solid fa-wand-magic-sparkles"></i>
+                                <span>
+                                    KHU VỰC TRANG ĐIỂM LÀM ĐẸP CAO CẤP
+                                </span>
+                            </div>
+                        </div>
+                        <div id="icon06" class="gymz-element-box">
+                            <div class="gymz-element-box gymz-icon-text">
+                                <i class="fa-solid fa-star"></i>
+                                <span>
+                                    SỬ DỤNG SAUNA STEAMBATH MIỄN PHÍ
+                                </span>
+                            </div>
+                        </div>
+                        <div id="icon07" class="gymz-element-box">
+                            <div class="gymz-element-box gymz-icon-text2">
+                                <i class="fa-solid fa-gift"></i> TẶNG 2 BUỔI TẬP CÙNG HUẤN LUYỆN VIÊN CÁ NHÂN
+                                <span>
+                                    HƯỚNG DẪN TẬP LUYỆN 1:1
+                                </span>
                             </div>
                         </div>
                     </div>
