--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -136,7 +136,10 @@
                         </div>
                     </div>
                     <div class="container__colum1__inner2">
-                        VÒNG QUAY SẤM SÉT
+                        <div class="container__colum1__inner2__box">
+                            <img src="../img/promotion/lucky.png" alt="" class="container__colum1__inner2__img">
+                            <img src="https://w.ladicdn.com/source/spin-btn1.svg" onclick="startClick()" alt="" class="start__img">
+                        </div>
                     </div>
                 </div>
                 <div class="container__colum2">
@@ -407,6 +410,7 @@
     <div class="nen_mo"></div>
     <!-- <script src="./index.js"></script> -->
     <script src="../navigation_javascript/menuv2.js"></script>
+    <script src="../navigation_javascript/promotion.js"></script>
     <!-- <script src="../navigation_javascript/menu.js"></script> -->
 </body>
 
