--- a/navigation/admin.html
+++ b/navigation/admin.html
@@ -220,7 +220,7 @@
                         </div>
                         <i class="remove-icon fa-solid fa-trash"></i>
                         <div class="container__show__cart__content">
-                            <table class="table__show">
+                            <table class="table__show table__show__main">
                                 <tr class="tr__show">
                                     <th class="th__show">Mã thẻ</th>
                                     <th class="th__show">Tên Hội Viên</th>
@@ -283,7 +283,7 @@
 
     <div class="nen_mo"></div>
     <script src="../navigation_javascript/admin.js"></script>
-    <script src="./navigation_javascript/menuv2.js"></script>
+    <script src="../navigation_javascript/menuv2.js"></script>
 </body>
 
 </html>
