--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -368,7 +368,7 @@
                             <div class="gymz-element-box gymz-icon-text">
                                 <i class="fa-solid fa-vault"></i>
                                 <span>
-                                    TỪ KHOÁ CÁ NHÂN AN TOÀN FACEID/SMART LOCKER
+                                    TỦ KHOÁ CÁ NHÂN AN TOÀN FACEID/SMART LOCKER
                                 </span>
                             </div>
                         </div>
@@ -388,16 +388,19 @@
                                 </span>
                             </div>
                         </div>
-                        <div id="icon07" class="gymz-element-box">
-                            <div class="gymz-element-box gymz-icon-text2">
-                                <i class="fa-solid fa-gift"></i> TẶNG 2 BUỔI TẬP CÙNG HUẤN LUYỆN VIÊN CÁ NHÂN
-                                <span>
-                                    HƯỚNG DẪN TẬP LUYỆN 1:1
-                                </span>
+                        <div id="icon07" class="gymz-element-box-gift">
+                            <div class="gymz-element-box-gift gymz-icon-box">
+                                <div class="gymz-icon-box-text">
+                                    <i class="fa-solid fa-gift"></i> TẶNG 2 BUỔI TẬP CÙNG HLV CÁ NHÂN
+                                    <span>
+                                        HƯỚNG DẪN TẬP LUYỆN 1:1
+                                    </span>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
         <div class="footer">
