--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -291,7 +291,7 @@
                     <div class="gymz-group">
                         <div id="image04" class="gymz-element">
                             <div class="gymz-element gymz-image">
-                                <img src="../img/promotion/_atn9630-20200907105019.jpg" alt="KHU VỰC CARDIO">
+                                <img src="../img/promotion/qt2-20211014070415.jpg" alt="KHU VỰC CARDIO">
                             </div>
                         </div>
                         <div id="paragrap09" class="gymz-element">
@@ -311,7 +311,7 @@
                     <div class="gymz-group">
                         <div id="image05" class="gymz-element">
                             <div class="gymz-element gymz-image">
-                                <img src="../img/promotion/qt1-20211014054225.jpg" alt="STUDIO YOGA & GROUP X">
+                                <img src="../img/promotion/_dsc2381-20210425110234.jpg" alt="STUDIO YOGA & GROUP X">
                             </div>
                         </div>
                         <div id="paragrap011" class="gymz-element">
@@ -400,7 +400,52 @@
                         </div>
                     </div>
                 </div>
-
+                <div id="group07" class="gymz-element-box">
+                    <div class="gymz-box2">
+                        <div id="title02" class="gymz-element-box gymz-element-box-title">
+                            <div class="gymz-element-box gymz-element-box-title">
+                                <div class="gymz-element-box-title gymz-title">
+                                    <span class="gymz-title2">
+                                        ĐIỀN THÔNG TIN VÀO THẺ TẬP MIỄN PHÍ
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="form01" class="gymz-element-form">
+                            <div class="gymz-element-form gymz-element-form-inner">
+                                <div class="gymz-element-title">
+                                    HỌ VÀ TÊN
+                                </div>
+                                <input class="gymz-element-input" type="text">
+                            </div>
+                        </div>
+                        <div id="form01" class="gymz-element-form">
+                            <div class="gymz-element-form gymz-element-form-inner">
+                                <div class="gymz-element-title">
+                                    SỐ ĐIỆN THOẠI
+                                </div>
+                                <input class="gymz-element-input" type="text">
+                            </div>
+                        </div>
+                        <div id="form01" class="gymz-element-form">
+                            <div class="gymz-element-form gymz-element-form-inner">
+                                <div class="gymz-element-title">
+                                    CLB QUAN TÂM
+                                </div>
+                                <input class="gymz-element-input" type="text">
+                            </div>
+                        </div>
+                        <div id="button01" class="gymz-element-form">
+                            <div class="gymz-element-form gymz-element-form-inner">
+                                <div class="gymz-element-form-inner-button">
+                                    <button class="gymz-element-button">
+                                        NHẬN ƯU ĐÃI NGAY
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="footer">
