--- a/navigation/train.html
+++ b/navigation/train.html
@@ -43,14 +43,15 @@
                         <li>
                             <div class="dropdown">
                                 <a class="header__inner__navigation__sevice" href="#" onclick="yourFunction(event)">
-                                    <span>DỊCH VỤ</span><m><i class='bx bxs-right-arrow'></i></m>
+                                    <span>DỊCH VỤ</span>
+                                    <m><i class='bx bxs-right-arrow'></i></m>
                                 </a>
                                 <div class="containt">
                                     <a href="./card.html">THẺ HỘI VIÊN</a>
                                     <a href="./train.html"><span>HUẤN LUYỆN VIÊN</span></a>
                                     <a href="./shop.html">CỬA HÀNG WHEY</a>
                                     <a href="./chatbox.html">CHAT ONLINE</a>
-                              </div>
+                                </div>
                             </div>
                         </li>
                         <li><a class="header__inner__navigation__sevice" href="./promotion.html">KHUYẾN MÃI</a></li>
@@ -152,6 +153,10 @@
                         <div class="container__train__coach__img__items container__train__coach__img3">
                             <img src="../img/services/coach/img3.jpg" alt="">
                             <p>Shin Phamm</p>
+                            <p class="ppppo">Phạm Thanh Tùng là một chàng trai Hà Nội mới 25 tuổi nhưng đã có hơn 2
+                                năm làm clip hướng dẫn tập thể hình trên YouTube. Kênh Shin Phamm của Tùng hiện đã
+                                có gần 348.000 người đăng ký và cũng sỡ hữu nhiều clip đạt “triệu view” ấn tượng.
+                            </p>
                         </div>
                         <div class="container__train__coach__img__items container__train__coach__img4">
                             <img src="../img/services/coach/img4.jpg" alt="">
