--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -136,9 +136,14 @@
                         </div>
                     </div>
                     <div class="container__colum1__inner2">
+                        <img class="redcloud" src="../img/promotion/redcloud.png" alt="redcloud">
+                        <img class="redcloud2" src="../img/promotion/redcloud.png" alt="redcloud">
+                        <img class="khbcaigiluon" src="../img/promotion/khbcaigiluon.png" alt="chiuu">
+                        <img class="khbcaigiluon2" src="../img/promotion/khbcaigiluon.png" alt="chiuu">
                         <div class="container__colum1__inner2__box">
                             <img src="../img/promotion/lucky.png" alt="" class="container__colum1__inner2__img">
                             <img src="https://w.ladicdn.com/source/spin-btn1.svg" onclick="startClick()" alt="" class="start__img">
+                            
                         </div>
                     </div>
                 </div>
@@ -205,13 +210,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container__colum2__inner3">
+                    <!-- <div class="container__colum2__inner3">
                         <div class="container__colum2__inner__select">
                             <div class="image__inner">
                                 <img class="anh__ico" src="../img/icon/thuy1_1-20230927065901-mn5tk.png" alt="anh">
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
