--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body>
+<body oncontextmenu="return false;">
     <!-- <img class="background" src="../img/background/bgr_pro.png" alt="background"> -->
     <div class="app">
         <!-- LUU SY TRUONG -->
