--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -552,6 +552,44 @@
     </div> 
     <!-- overlay -->
     <div class="nen_mo"></div>
+    <div class="form__input">
+        <div class="form__input__select">
+            <div class="title__input">
+                NHẬP THÔNG TIN ĐỂ NHẬN ƯU ĐÃI NGAY
+            </div>
+            <div class="information__input">
+                <div class="fullname">
+                    <span class="title__input__box">
+                        HỌ VÀ TÊN
+                    </span>
+                    <div class="fullname__input">
+                        <input class="fullname__input fullname__input__box" type="text">
+                    </div>
+                </div>
+                <div class="fullname">
+                    <span class="title__input__box">
+                        SỐ ĐIỆN THOẠI
+                    </span>
+                    <div class="fullname__input">
+                        <input class="fullname__input fullname__input__box" type="text">
+                    </div>
+                </div>
+                <div class="fullname">
+                    <span class="title__input__box">
+                        EMAIL
+                    </span>
+                    <div class="fullname__input">
+                        <input class="fullname__input fullname__input__box" type="text">
+                    </div>
+                </div>
+                <div class="button">
+                    <button class="button__request">
+                        NHẬN ƯU ĐÃI
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- <script src="./index.js"></script> -->
     <script src="../navigation_javascript/menuv2.js"></script>
     <script src="../navigation_javascript/promotion.js"></script>
