--- a/navigation/train.html
+++ b/navigation/train.html
@@ -145,30 +145,59 @@
                         <div class="container__train__coach__img__items container__train__coach__img1">
                             <img src="../img/services/coach/img1.jpg" alt="">
                             <p>Ryan Long Fitness</p>
+                            <p class="infor">Đây là một trong những kênh hướng dẫn về tập thể hình được chú ý nhiều nhất
+                                trên YouTube tại Việt Nam. Người khởi xướng kênh này là Ryan Long, đang sinh sống tại
+                                TP.HCM. Kênh YouTube của Long thu hút tới hơn 560.000 người đăng ký với nhiều clip đạt
+                                hàng triệu lượt xem. Kênh Facebook của Ryan Long cũng có gần 124.000 người theo dõi.
+                                Điểm mạnh của Ryan Long Fitness là những bài tập giảm cân dành cho mọi đối tượng, song
+                                song với những bài hướng dẫn về chế độ dinh dưỡng khi tập cũng rất cuốn hút.</p>
                         </div>
                         <div class="container__train__coach__img__items container__train__coach__img2">
                             <img src="../img/services/coach/img2.jpg">
                             <p>An Nguyen Fitness</p>
+                            <p class="infor">Kênh YouTube mang tên An Nguyen Fitness hiện đã có gần 190.000 người đăng
+                                ký. Trong khi đó, kênh Facebook cũng đã có gần 66.000 người theo dõi. An là một thạc sĩ
+                                ngành quản trị truyền thông tại Mỹ. Với đam mê lớn với lĩnh vực fitness, anh chàng này
+                                đã biến đổi bản thân từ một người yếu ớt để trở thành một trong những YouTube có ảnh
+                                hưởng lớn. </p>
                         </div>
                         <div class="container__train__coach__img__items container__train__coach__img3">
                             <img src="../img/services/coach/img3.jpg" alt="">
                             <p>Shin Phamm</p>
-                            <p class="ppppo">Phạm Thanh Tùng là một chàng trai Hà Nội mới 25 tuổi nhưng đã có hơn 2
+                            <p class="infor">Phạm Thanh Tùng là một chàng trai Hà Nội mới 25 tuổi nhưng đã có hơn 2
                                 năm làm clip hướng dẫn tập thể hình trên YouTube. Kênh Shin Phamm của Tùng hiện đã
-                                có gần 348.000 người đăng ký và cũng sỡ hữu nhiều clip đạt “triệu view” ấn tượng.
-                            </p>
+                                có gần 348.000 người đăng ký và cũng sỡ hữu nhiều clip đạt “triệu view” ấn tượng.</p>
+                            <p class="infor">Từ một chàng trai từng mắc chứng rối loạn tiêu hóa nên chỉ nặng 49kg, Tùng
+                                đã quyết tâm thay đổi bản thân. Chàng du học sinh Nhật Bản đã tìm ra hướng đi mới cho
+                                bản thân và truyền cảm hứng cho rất nhiều bạn trẻ cùng trang lứa về việc rèn luyện thân
+                                thể.</p>
                         </div>
                         <div class="container__train__coach__img__items container__train__coach__img4">
                             <img src="../img/services/coach/img4.jpg" alt="">
                             <p>KDash Workout</p>
+                            <p class="infor">Mới nổi lên trên YouTube khoảng hơn 1 năm trở lại đây, KDash Workout thu
+                                hút gần 15.500 người theo dõi với những bài tập, hướng dẫn về thể hình đường phố.</p>
+                            <p class="infor">Chủ nhân của kênh này là Trọng Bùi, một anh chàng đến từ TP.HCM. Với khuôn
+                                mặt, vóc dáng… cực ngầu, KDash đã thu hút lượng lớn người xem các clip hướng dẫn từ cơ
+                                bản đến nâng cao hình thức thể hình đường phố. Ngoài hướng dẫn qua mạng, KDash cũng là
+                                một PT khi nhận kèm huấn luyện riêng cho những người có nhu cầu “độ thân thể”.</p>
                         </div>
                         <div class="container__train__coach__img__items container__train__coach__img5">
                             <img src="../img/services/coach/img5.jpg" alt="">
                             <p>Trang Lê</p>
+                            <p class="infor">Trang Lê là một huấn luyện viên thể hình cá nhân khá nổi tiếng trên mạng xã
+                                hội. Ngoài tài giỏi, cô ấy sở hữu một ngoại hình quyến rũ, khỏe khoắn. Trang mạng xã hội
+                                của cô có hơn 200 nghìn người theo dõi, và gương mặt của cô thường xuất hiện trên các
+                                trang báo lớn tại Việt Nam.</p>
                         </div>
                         <div class="container__train__coach__img__items container__train__coach__img5">
                             <img src="../img/services/coach/img6.jpg" alt="">
                             <p>Bùi Thạch Thảo</p>
+                            <p class="infor">Bùi thạch thảo là huấn luyện viên thể hình nữ hiện đang hoạt động tại trung
+                                tâm California. Là một người khá có tên tuổi trong ngành thể hình. Thời gian gần đây cô
+                                đã chiến thắng giải women physique tại giải thi đấu Muscle contest. Bùi Thạch Thảo có
+                                khả năng lập kế hoạch và chế độ dinh dưỡng cho từng học viên để phù hợp với sức khoẻ mà
+                                thể trạng của họ. Mục tiêu thành công của Thảo chính là kết quả của học viên.</p>
                         </div>
                     </div>
                 </div>
@@ -256,6 +285,9 @@
                             <p>CX-WORK</p>
                         </div>
                     </div>
+                </div>
+                <div class="container__train__dance">
+                    <h1>Những bộ môn Dance</h1>
                 </div>
             </div>
         </div>
